--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,8 +55,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-serif);
+  font-family: var(--font-complex);
   font-weight: 700;
+  color: var(--color-text-light);
 }
 
 p {
